initial style guide

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-  
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere aperiam minus corrupti. Dolore, officiis maxime. Beatae quisquam quis vel, voluptatem molestias exercitationem a ratione deserunt, quo necessitatibus voluptate earum nulla?</p>
 </body>
 </html>
