--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travelgram | Perfil de viagens</title>
 
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere aperiam minus corrupti. Dolore, officiis maxime. Beatae quisquam quis vel, voluptatem molestias exercitationem a ratione deserunt, quo necessitatibus voluptate earum nulla?</p>
+
 </body>
 </html>
